--- a/Project/GUIForAudio/pro/GUIForAudio.uvprojx
+++ b/Project/GUIForAudio/pro/GUIForAudio.uvprojx
@@ -400,11 +400,6 @@
               <FilePath>..\src\main.c</FilePath>
             </File>
             <File>
-              <FileName>lcd.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\src\lcd.c</FilePath>
-            </File>
-            <File>
               <FileName>user_api.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\src\user_api.c</FilePath>
@@ -415,14 +410,154 @@
               <FilePath>..\src\user_init.c</FilePath>
             </File>
             <File>
+              <FileName>adc_ctrl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\adc_ctrl.c</FilePath>
+            </File>
+            <File>
+              <FileName>app_port.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\app_port.c</FilePath>
+            </File>
+            <File>
+              <FileName>buzzer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\buzzer.c</FilePath>
+            </File>
+            <File>
+              <FileName>code_switch.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\code_switch.c</FilePath>
+              <FileOption>
+                <CommonProperty>
+                  <UseCPPCompiler>2</UseCPPCompiler>
+                  <RVCTCodeConst>0</RVCTCodeConst>
+                  <RVCTZI>0</RVCTZI>
+                  <RVCTOtherData>0</RVCTOtherData>
+                  <ModuleSelection>0</ModuleSelection>
+                  <IncludeInBuild>2</IncludeInBuild>
+                  <AlwaysBuild>2</AlwaysBuild>
+                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
+                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
+                  <PublicsOnly>2</PublicsOnly>
+                  <StopOnExitCode>11</StopOnExitCode>
+                  <CustomArgument></CustomArgument>
+                  <IncludeLibraryModules></IncludeLibraryModules>
+                  <ComprImg>1</ComprImg>
+                </CommonProperty>
+                <FileArmAds>
+                  <Cads>
+                    <interw>2</interw>
+                    <Optim>0</Optim>
+                    <oTime>2</oTime>
+                    <SplitLS>2</SplitLS>
+                    <OneElfS>2</OneElfS>
+                    <Strict>2</Strict>
+                    <EnumInt>2</EnumInt>
+                    <PlainCh>2</PlainCh>
+                    <Ropi>2</Ropi>
+                    <Rwpi>2</Rwpi>
+                    <wLevel>0</wLevel>
+                    <uThumb>2</uThumb>
+                    <uSurpInc>2</uSurpInc>
+                    <uC99>2</uC99>
+                    <useXO>2</useXO>
+                    <v6Lang>0</v6Lang>
+                    <v6LangP>0</v6LangP>
+                    <vShortEn>2</vShortEn>
+                    <vShortWch>2</vShortWch>
+                    <v6Lto>0</v6Lto>
+                    <v6WtE>2</v6WtE>
+                    <v6Rtti>2</v6Rtti>
+                    <VariousControls>
+                      <MiscControls></MiscControls>
+                      <Define></Define>
+                      <Undefine></Undefine>
+                      <IncludePath></IncludePath>
+                    </VariousControls>
+                  </Cads>
+                </FileArmAds>
+              </FileOption>
+            </File>
+            <File>
+              <FileName>common.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\common.c</FilePath>
+            </File>
+            <File>
+              <FileName>flash_ctrl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\flash_ctrl.c</FilePath>
+            </File>
+            <File>
+              <FileName>io_buf_ctrl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\io_buf_ctrl.c</FilePath>
+            </File>
+            <File>
+              <FileName>IOCtrl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\IOCtrl.c</FilePath>
+            </File>
+            <File>
+              <FileName>key_led.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\key_led.c</FilePath>
+            </File>
+            <File>
+              <FileName>key_led_ctrl.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\key_led_ctrl.c</FilePath>
+            </File>
+            <File>
+              <FileName>key_led_table.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\key_led_table.c</FilePath>
+            </File>
+            <File>
+              <FileName>message.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\message.c</FilePath>
+            </File>
+            <File>
+              <FileName>message_2.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\message_2.c</FilePath>
+            </File>
+            <File>
+              <FileName>protocol.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\protocol.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>gui</GroupName>
+          <Files>
+            <File>
               <FileName>demo.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\src\demo.c</FilePath>
             </File>
             <File>
-              <FileName>I2C.c</FileName>
+              <FileName>gui_driver.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\I2C.c</FilePath>
+              <FilePath>..\src\gui_driver.c</FilePath>
+            </File>
+            <File>
+              <FileName>lv_font_chs_24.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\lv_font_chs_24.c</FilePath>
+            </File>
+            <File>
+              <FileName>gui.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\gui.c</FilePath>
+            </File>
+            <File>
+              <FileName>gt9147.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\gt9147.c</FilePath>
             </File>
             <File>
               <FileName>gt811.c</FileName>
@@ -480,19 +615,14 @@
               </FileOption>
             </File>
             <File>
-              <FileName>gt9147.c</FileName>
+              <FileName>I2C.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\gt9147.c</FilePath>
+              <FilePath>..\src\I2C.c</FilePath>
             </File>
             <File>
-              <FileName>gui.c</FileName>
+              <FileName>lcd.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\src\gui.c</FilePath>
-            </File>
-            <File>
-              <FileName>lv_font_chs_24.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\src\lv_font_chs_24.c</FilePath>
+              <FilePath>..\src\lcd.c</FilePath>
             </File>
           </Files>
         </Group>
