--- a/Project/GUIForAudio/pro/GUIForAudio.uvprojx
+++ b/Project/GUIForAudio/pro/GUIForAudio.uvprojx
@@ -529,6 +529,16 @@
               <FileType>1</FileType>
               <FilePath>..\src\protocol.c</FilePath>
             </File>
+            <File>
+              <FileName>extern_peripheral.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\extern_peripheral.c</FilePath>
+            </File>
+            <File>
+              <FileName>message_3.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\src\message_3.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
